--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "inspect": "supervisor --inspect=0.0.0.0:9229 app.js "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.12"
+    "mongoose": "^5.6.13",
+    "npm": "^6.11.3"
   }
 }
