--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/",
     "inspect": "supervisor --inspect=0.0.0.0:9229 app.js "
   },
   "author": "",
@@ -19,5 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "npm": "^6.11.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
